--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ body {
 .text {
     color: #767d87;
     line-height: 1.5;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 .numbers-links {
     display: flex;
